--- a/responsive.css
+++ b/responsive.css
@@ -1,10 +1,10 @@
 @media (max-width: 900px) {
-
-  .body, video {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  .body,
+  video {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   .app,
@@ -40,16 +40,15 @@
   .time-display {
     font-size: 50px;
   }
- 
 }
 
 @media (max-width: 770px) {
-
-  .body, video {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  .body,
+  video {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   .app,
@@ -74,7 +73,7 @@
   .player-container {
     align-items: center;
     margin: auto;
-    align-self: flex-end; 
+    align-self: flex-end;
   }
 
   .sound-picker {
@@ -106,16 +105,15 @@
     height: 10%;
     font-size: 15px;
   }
- 
 }
 
 @media (max-width: 560px) {
-
-  .body, video {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  .body,
+  video {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   .app,
@@ -139,7 +137,7 @@
   .player-container {
     align-items: center;
     margin: auto;
-    align-self: flex-end; 
+    align-self: flex-end;
   }
 
   .sound-picker {
@@ -161,16 +159,15 @@
     align-self: center;
     padding: 0rem;
   }
- 
 }
 
 @media (max-width: 425px) {
-
-  .body, video {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
+  .body,
+  video {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
 
   .app,
@@ -223,7 +220,7 @@
     font-size: 21px;
     padding: 10px;
   }
- 
+
   img.play {
     height: 20%;
   }
